--- a/package.json
+++ b/package.json
@@ -33,17 +33,13 @@
     "@babel/core": "^7.1.2",
     "@babel/polyfill": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "jasmine-core": "^3.2.1",
-    "karma": "^3.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "latest",
-    "karma-jasmine": "^2.0.1",
-    "karma-mocha-reporter": "latest",
-    "karma-webpack": "^4.0.0-rc.3",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
-    "jest-jasmine2": "^23.6.0",
-    "jest-matchers": "^20.0.3",
-    "karma-babel-preprocessor": "^8.0.0-beta.0",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0",
+    "plugin-error": "^1.0.1",
+    "aurelia-loader-nodejs": "^1.0.1",
+    "aurelia-pal-nodejs": "^1.1.1",
+    "babel-jest": "^23.6.0",
+    "babel-core": "7.0.0-bridge.0",
     "less-loader": "latest",
     "less": "latest",
     "gulp-rename": "^1.4.0",
@@ -66,6 +62,41 @@
     "istanbul-instrumenter-loader": "^3.0.1",
     "opn": "^5.4.0",
     "webpack-bundle-analyzer": "latest"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^aurelia-binding$": "<rootDir>/node_modules/aurelia-binding"
+    },
+    "modulePaths": [
+      "<rootDir>/src",
+      "<rootDir>/node_modules"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json"
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "testRegex": "\\.spec\\.js$",
+    "setupFiles": [
+      "<rootDir>/test/jest-pretest.js"
+    ],
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!**/*.spec.js",
+      "!**/node_modules/**",
+      "!**/test/**"
+    ],
+    "coverageDirectory": "<rootDir>/test/coverage-jest",
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text",
+      "html"
+    ]
   },
   "engines": {
     "node": ">= 6.0.0"
